# dots

./: CLAUDE.md  Cargo.toml  README.md  WALKTHROUGH.md  install.sh  make-publishable-prompt.md
.github/workflows/: release.yml
src/: config.rs  git.rs  main.rs  platform.rs  sync.rs  watcher.rs
src/commands/: add.rs  config.rs  init.rs  link.rs  mod.rs  pull.rs  push.rs  rsync.rs  scan.rs  status.rs  update.rs  watch.rs
