[package]
name = "dots"
version = "0.3.3"
edition = "2021"
description = "A cross-platform dotfile sync tool"
license = "MIT"
repository = "https://github.com/yelsed/dots"
readme = "README.md"
keywords = ["dotfiles", "cli", "sync", "config", "cross-platform"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
notify = "7"
git2 = "0.19"
dialoguer = "0.11"
colored = "2"
notify-rust = "4"
anyhow = "1"
dirs = "6"
sha2 = "0.10"
hex = "0.4"
ureq = { version = "3", features = ["json"] }
semver = "1"
flate2 = "1"
tar = "0.4"
zip = "2"
